Initial get job methods for the import api
